fixed row and column alignment

--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -79,7 +79,7 @@
 #todo-list-header-card {
     padding-top:25px;
     height:30px;
-    width: 98%;
+
 }
 
 #todo-list-items-div {
@@ -92,8 +92,10 @@
 .list-item-card {
     padding-top:20px;
     height: 45px;
+    width:100%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
 .item-col {
